# course-companion

./: .env  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.txt
.github/: PULL_REQUEST_TEMPLATE.md  bugfix.md  copilot-instructions.md
.github/PULL_REQUEST_TEMPLATE/: feature.md
.github/workflows/: ci-cd.yaml  codeql-analysis.yaml  promote-develop.yaml
client/: .dockerignore  CMakeLists.txt  conanfile.txt
client/include/controller/: AssignmentController.hpp  CourseController.hpp  TermController.hpp
client/include/view/qt/: AssignmentView.hpp  CourseView.hpp  FormDialog.hpp  TermView.hpp
client/scripts/: build-configure  generate-coverage-mac  generate-coverage-win  make-build  run-main  run-tests  setup-deps
client/src/: main.cpp
client/src/controller/: AssignmentController.cpp  CourseController.cpp  TermController.cpp
client/src/db/: AssignmentRepository.cpp  DatabaseConnection.cpp
client/src/model/: Course.cpp
client/src/utils/: utils.cpp
client/src/view/cli/: CliView.cpp
client/src/view/qt/: AssignmentView.cpp  CourseView.cpp  FormDialog.cpp  MainWindow.cpp  TermView.cpp
client/tests/integration/: CMakeLists.txt
client/tests/integration/db/: CourseRepositoryTests.cpp
client/tests/integration/model/: CourseAssignmentIntegrationTests.cpp  TermCourseIntegrationTests.cpp
client/tests/unit/: CMakeLists.txt
client/tests/unit/controller/: AssignmentControllerTests.cpp  CourseControllerTests.cpp  TermControllerTests.cpp
client/tests/unit/model/: AssignmentTests.cpp
client/tests/unit/utils/: UtilsTests.cpp
client/tests/unit/view/cli/: CliViewTests.cpp
include/: Assignment.h  Assignment.hpp  Course.hpp  Term.hpp
include/app/: controller.hpp  utils.hpp
include/controller/: AssignmentController.hpp  Controller.hpp  CourseController.hpp  MockController.hpp  TermController.hpp
include/db/: AssignmentRepository.hpp  CourseRepository.hpp  DatabaseConnection.hpp  IDatabase.hpp  TermRepository.hpp
include/model/: Assignment.hpp  Course.hpp  Term.hpp
include/models/: Assignment.hpp  Course.hpp  Term.hpp
include/utils/: utils.hpp
include/view/: CliView.hpp
include/view/cli/: CliView.hpp
include/view/qt/: MainWindow.hpp  TermView.hpp
scripts/: build-configure  clear-build  export-test-logs  generate-coverage  generate-coverage-mac  generate-coverage-win  make-build  rm-prev-build  rm-prev-build_main  rm-prev-build_test  run-main  run-tests  setup-deps  wsl-build-configure  wsl-setup-deps
server/: .env.example  main.py  pyproject.toml
server/app/: database.py  main.py
server/app/routes/: assignments.py  courses.py  terms.py
server/app/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/scripts/: init-db.py  py-lint
server/tests/: conftest.py  test_assignments.py  test_courses.py  test_terms.py
src/: Assignment.cpp  main.cpp
src/app/: controller.cpp  main.cpp  utils.cpp
src/controller/: AssignmentController.cpp  Controller.cpp  CourseController.cpp  TermController.cpp
src/db/: AssignmentRepository.cpp  CourseRepository.cpp  DatabaseConnection.cpp  TermRepository.cpp
src/model/: Assignment.cpp  Course.cpp  Term.cpp
src/models/: Assignment.cpp  Course.cpp  Term.cpp
src/utils/: utils.cpp
src/view/: CliView.cpp
src/view/qt/: MainWindow.cpp  TermView.cpp
tests/: AssignmentTests.cpp  CMakeLists.txt
tests/integration/: CMakeLists.txt  ControllerIntegrationTests.cpp  ControllerTests.cpp  CourseAssignmentIntegrationTests.cpp  TermCourseIntegrationTests.cpp
tests/integration/controller/: ControllerIntegrationTests.cpp
tests/integration/db/: AssignmentRepositoryTests.cpp  CourseRepositoryTests.cpp  TermRepositoryTests.cpp
tests/unit/: AssignmentTests.cpp  CMakeLists.txt  CliViewTests.cpp  CourseTests.cpp  TermTests.cpp  UtilsTests.cpp
tests/unit/controller/: AssignmentControllerTests.cpp  CourseControllerTests.cpp  TermControllerTests.cpp
tests/unit/db/: AssignmentRepositoryTests.cpp  CourseRepositoryTests.cpp  TermRepositoryTests.cpp
tests/unit/model/: AssignmentTests.cpp  CourseTests.cpp  TermTests.cpp
tests/unit/utils/: UtilsTests.cpp
tests/unit/view/: CliViewTests.cpp
