[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "docformatter>=1.7.8",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.uv]
package = true

[tool.isort]
profile = "black"
line_length = 79
skip = [".venv", ".git", "__pycache__"]

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.pyright]
ignore = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app"]
addopts = "--cov=src --cov-report=xml:../docs/evaluation/coverage-report/coverage.xml --cov-report=html:../docs/evaluation/coverage-report/html --cov-report=term-missing"